# Billing-Software

./: .gitignore  BMS Backup.sql  BMS.qrc  BMS_Home_GUI.ui  BarcodeHelper.py  BillingManagementSystem.py  BillingManagementSystem_Refactored.py  Menu.ui  README.md  Set_api.py  api.py  app.py  checkServer.py  launcher.bat  main.py  pyproject.toml  qt_helper.py  query_format_advanced.py  requirements.txt  resource.env  server.py  todo.info  utils.py
Barcodes/: batch_number.json
Resources/: Default.qss  Query_Formatter.ui  Resource Loader.py
UserRegistration/: RegisterUser.py  SetPassword.py  UserRegistration.py
app/api/: api_core.py
app/commands/: generate_bill_command.py
app/controllers/: auth_controller.py  billing_controller.py  printer_controller.py  stock_controller.py
app/models/: bill.py  db_manager.py  user.py
app/observers/: stock_observer.py
app/utils/: logger.py  worker_factory.py
app/views/: home_gui.py
config/: BMS_Home_GUI.ui  constants.py  db_config.json
printer/: img.py  prnt_utils.py  tmp.py
resources/: Query_Formatter.ui  Resource Loader.py
user_registration/: SetPassword.py
utils/: __init__.py  barcode.py  enums.py  server.py  types.py  users.py
